Page Loader implementation Loader Service

--- a/ums-client-app/src/index.html
+++ b/ums-client-app/src/index.html
@@ -18,8 +18,7 @@
             <div id="route-view" class="page-view"></div>
         </div>
     </div>
-
-    
+    <wc-loader loading="false"></wc-loader>
     <script type="text/javascript" src="/index.js"></script>
 </body>
 </html>
