--- a/ums-client-app/src/web-components/group-dashboard/index.html
+++ b/ums-client-app/src/web-components/group-dashboard/index.html
@@ -1,13 +1,13 @@
 <section class="container">        
     <section class="top"> 
-        <h1>{{l('userdashboard.title')}}</h1>
+        <h1>{{l('groupdashboard.title')}}</h1>
     </section>
     <section class="bottom"> 
         <section class="left">
-            <wc-user-list></wc-user-list>
+            <wc-group-list></wc-group-list>
         </section>
         <section class="right">
-            <wc-user-card></wc-user-card>
+            <wc-group-card groupid=""></wc-group-card>
         </section>
     </section>
 </section>
