--- a/ums-client-app/src/web-components/user-form/index.html
+++ b/ums-client-app/src/web-components/user-form/index.html
@@ -1,9 +1,4 @@
 <div class="container">
-    <h1>{{l('usercard.title')}}</h1>
-    <h2 class="name">{{d.user.firstName}}</h2>
-    <h3 class="email">{{d.user.email}}</h3>
-    <div class="groups">
-        <h2 class="group-heading"></h2>
-        <ul class="group-list"></ul>
-    </div>
+    <h1>{{l('userform.title')}}</h1>
+    <p>This feature is IN-PROGRESS</p>
 </div>
