--- a/ums-client-app/src/web-components/user-card/index.html
+++ b/ums-client-app/src/web-components/user-card/index.html
@@ -1,13 +1,15 @@
 <div class="container">
     <h1>{{l('usercard.title')}}</h1>
-    <section class="controls">
+    <section class="controls {{!d.user || !d.user.id ? 'hidden': ''}}">
         <a action-name="delete" class="btn" id="delete-btn" href="#">{{l('usercard.delete')}}</a>
         <a action-name="edit" class="btn" id="edit-btn" href="#">{{l('usercard.edit')}}</a>
         <a action-name="add" class="btn" id="add-btn" href="#">{{l('usercard.add')}}</a>
     </section>
-    <div class="info-container {{d.user ? '' : 'hidden'}}">
+    <div class="info-container {{!d.user || !d.user.id ? 'hidden': ''}}">
         <div class="info">
             <div class="name">
+                <h3>{{l('usercard.label.id')}}</h3>
+                <span>{{d.user.id}}</span>
                 <h3>{{l('usercard.label.firstname')}}</h3>
                 <span>{{d.user.firstName}}</span>
                 <h3>{{l('usercard.label.lastname')}}</h3>
@@ -23,5 +25,5 @@
             <wc-group-list disable-search="true" userid="{{d.user.id}}"></wc-group-list>
         </div>
     </div>
-    <wc-error-box hide="{{d.user ? true : false}}" message="{{d.error}}"></wc-error-box>
+    <wc-error-box hide="{{!d.user || !d.user.id ?false:true}}" message="{{d.error}}"></wc-error-box>
 </div>
