Form Updates Page Footer

--- a/ums-client-app/src/index.html
+++ b/ums-client-app/src/index.html
@@ -17,7 +17,8 @@
         <div class="container">
             <div id="route-view" class="page-view"></div>
         </div>
-    </div>
+    </div>    
+    <wc-page-footer></wc-page-footer>
     <wc-loader loading="false"></wc-loader>
     <script type="text/javascript" src="/index.js"></script>
 </body>
