--- a/ums-client-app/src/page-views/home.html
+++ b/ums-client-app/src/page-views/home.html
@@ -7,6 +7,7 @@
         <li>Created own <strong>Custom HTML template rendering</strong> service</li>
         <li>Created own <strong>Custom Internationalization and language</strong> service</li>
         <li>Created own <strong>Router</strong> service</li>
+        <li>Created own <strong>Loader</strong> service, that shows loaders across application components.</li>
         <li>Application <strong>Theming</strong> implemented using CSS variables</li>
         <li>ES Linting</li>
         <li>Webpack: Build and Bundling</li>
