--- a/ums-client-app/src/web-components/user-form/index.html
+++ b/ums-client-app/src/web-components/user-form/index.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>{{l('userform.title')}}</h1>
+    <!-- <h1>{{l('userform.title')}}</h1> -->
     <p>This feature is IN-PROGRESS</p>
     <section class="form-container">
         <form method="POST">
@@ -22,7 +22,14 @@
             </div>
             <div class="field">
                 <label>{{l('userform.label.groups')}}</label>
-                <button type="button">{{l('userform.addgroups')}}</button>
+                <div class="group-selection">
+                    <wc-group-list class='source'></wc-group-list>
+                    <div class="mid-controls">
+                        <a class="btn-add" href="javascript:void(0)" action="add"><i class="ic arrow-down"></i></a>
+                        <a class="btn-remove" href="javascript:void(0)" action="remove"><i class="ic arrow-up"></i></a>
+                    </div>
+                    <wc-group-list class='target' disable-search="true" userid="{{d.user.id}}"></wc-group-list>
+                </div>
             </div>
             <hr/>
             <button type="submit">{{l('userform.submit')}}</button>
